--- a/sass/_templates/_offer.sass
+++ b/sass/_templates/_offer.sass
@@ -35,3 +35,7 @@
         color: $main-blue
         font-size: 1.2rem
         pointer-events: none
+@media screen and ( max-width: 321px )
+    .offer-block
+        padding-left: 15px
+        padding-right: 15px !important
